1.006  2008-10-06
  - Added username_field configuration option. I need this to play
    nice with Catalyst::Authentication::Store::Tangram.
  - Doc cleanups / clarifications related to RT#39838

1.005  2008-09-25
  - Added better description of the use of the domains and
    use_uri_for options (info culled from RFC2617).
  - Split init method out to make this module easier to sub-class
    (used by Catalyst::Authentication::HTTP::Proxy).

1.004  2008-09-12
   - Add tests for use_uri_for configuration options.
   - Add tests and documentation for storing an MD5
     of "$user:$relam:$password" instead of cleartext password
     when doing digest auth.

1.003  2008-09-11
   - Add ability to override the realm name presented for authentication
     when calling $c->authenticate. Documentation and tests for this.
   - Clean up documentation of options inherited from 
     Catalyst::Authentication::Credential::Password.
   - Added an example of calling methods in the credential module from a 
     controller to the POD.
   - Tests for the authorization_required_message configuration parameter. 
   - Document use_uri_for configuration option
   - Document domain option (passed through from $c->authenticate) and add 
     tests for this option.

1.002  2008-09-03
   - Fix the assumptions that the password field is named password when doing 
     digest auth.

1.001  2008-09-02
   - Fix some of the assumptions about the user class by inheriting from the
     Catalyst::Authentication::Credential::Password module. This should make
     using DBIC as a store work correctly for basic auth.
   - Updated synopsis and todo list, this module still needs some work before
     it's ready for prime time again..

1.000  2008-09-01
   - Rename to remove Plugin from namespace. This is a pretty breaking change,
     as lots of things work differently with the new auth refactor.
   - Pull out some functionality which I think is better in other 